<resources>
    <string name="app_name">Oving2</string>
    <string name="add">Add</string>
    <string name="multiply">Multiply</string>
    <string name="answer">Answer</string>
    <string name="upper_limit">Top limit:</string>
    <string name="correct">Correct!</string>
    <string name="wrong">Wrong. Correct answer is:</string>
    <string name="temp_answer">8</string>
    <string name="number2">5</string>
    <string name="number">3</string>
    <string name="temp_top_limit">10</string>
</resources>