<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MathActivity">

    <EditText
        android:id="@+id/upper_limit"
        android:layout_width="141dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/temp_top_limit"
        app:layout_constraintBottom_toTopOf="@+id/top_limit_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/answer"
        app:layout_constraintTop_toBottomOf="@+id/num2" />

    <TextView
        android:id="@+id/num1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number"
        app:layout_constraintBottom_toTopOf="@+id/answer"
        app:layout_constraintEnd_toStartOf="@+id/num2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/num2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number2"
        app:layout_constraintBottom_toTopOf="@+id/upper_limit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/num1"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickAdd"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/multiply"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer_label" />

    <Button
        android:id="@+id/multiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickMultiply"
        android:text="@string/multiply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/add"
        app:layout_constraintTop_toBottomOf="@+id/top_limit_label" />

    <EditText
        android:id="@+id/answer"
        android:layout_width="144dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/temp_answer"
        app:layout_constraintBottom_toTopOf="@+id/answer_label"
        app:layout_constraintEnd_toStartOf="@+id/upper_limit"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/num1" />

    <TextView
        android:id="@+id/answer_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer"
        app:layout_constraintBottom_toTopOf="@+id/add"
        app:layout_constraintEnd_toStartOf="@+id/top_limit_label"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer" />

    <TextView
        android:id="@+id/top_limit_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upper_limit"
        app:layout_constraintBottom_toTopOf="@+id/multiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/answer_label"
        app:layout_constraintTop_toBottomOf="@+id/upper_limit" />

</androidx.constraintlayout.widget.ConstraintLayout>